<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/a11"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/a12"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/text1"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/text1" />

    <EditText
        android:id="@+id/a14"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/a13"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a11"
        app:layout_constraintStart_toEndOf="@+id/a11"
        app:layout_constraintTop_toTopOf="@+id/a11" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a12"
        app:layout_constraintStart_toEndOf="@+id/a12"
        app:layout_constraintTop_toTopOf="@+id/a12" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a13"
        app:layout_constraintStart_toEndOf="@+id/a13"
        app:layout_constraintTop_toTopOf="@+id/a13" />

    <EditText
        android:id="@+id/a21"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a11" />

    <EditText
        android:id="@+id/a22"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/a23"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <EditText
        android:id="@+id/a24"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a21"
        app:layout_constraintStart_toEndOf="@+id/a21"
        app:layout_constraintTop_toTopOf="@+id/a21" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a22"
        app:layout_constraintStart_toEndOf="@+id/a22"
        app:layout_constraintTop_toTopOf="@+id/a22" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a23"
        app:layout_constraintStart_toEndOf="@+id/a23"
        app:layout_constraintTop_toTopOf="@+id/a23" />

    <EditText
        android:id="@+id/x2"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <EditText
        android:id="@+id/x1"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a14"
        app:layout_constraintStart_toEndOf="@+id/a14"
        app:layout_constraintTop_toTopOf="@+id/a14" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a24"
        app:layout_constraintStart_toEndOf="@+id/a24"
        app:layout_constraintTop_toTopOf="@+id/a24" />

    <EditText
        android:id="@+id/a31"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a21" />

    <EditText
        android:id="@+id/x3"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <EditText
        android:id="@+id/a34"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <EditText
        android:id="@+id/a33"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <EditText
        android:id="@+id/a32"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a31"
        app:layout_constraintStart_toEndOf="@+id/a31"
        app:layout_constraintTop_toTopOf="@+id/a31" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a32"
        app:layout_constraintStart_toEndOf="@+id/a32"
        app:layout_constraintTop_toTopOf="@+id/a32" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a33"
        app:layout_constraintStart_toEndOf="@+id/a33"
        app:layout_constraintTop_toTopOf="@+id/a33" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a34"
        app:layout_constraintStart_toEndOf="@+id/a34"
        app:layout_constraintTop_toTopOf="@+id/a34" />

    <EditText
        android:id="@+id/a41"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a31" />

    <EditText
        android:id="@+id/a42"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14" />

    <EditText
        android:id="@+id/a43"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a41"
        app:layout_constraintStart_toEndOf="@+id/a41"
        app:layout_constraintTop_toTopOf="@+id/a41" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a42"
        app:layout_constraintStart_toEndOf="@+id/a42"
        app:layout_constraintTop_toTopOf="@+id/a42" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a43"
        app:layout_constraintStart_toEndOf="@+id/a43"
        app:layout_constraintTop_toTopOf="@+id/a43" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/x4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/a44"
        app:layout_constraintStart_toEndOf="@+id/a44"
        app:layout_constraintTop_toTopOf="@+id/a44" />

    <EditText
        android:id="@+id/a44"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <EditText
        android:id="@+id/x4"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/result"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a41" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="результат" />
</androidx.constraintlayout.widget.ConstraintLayout>